[package]
name = "sample_heap"
version = "0.1.0"
authors = ["Nikolai Maas <nikolai.maas@student.kit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
static_assertions = "1.1"
# possibly smallvec can be exchanged with a usual Vec
smallvec = "1.4"
rand = "0.7"
rand_pcg = "0.2"
lazy_static = "1.4"
# used only for timings
num-format = "0.4"

[dependencies.arrayvec]
version = "0.5"
features = ["array-sizes-33-128", "array-sizes-129-255"]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sorting_benchmark"
harness = false
